--- a/myapp/assets/styles/layout.css
+++ b/myapp/assets/styles/layout.css
@@ -12,16 +12,14 @@ header {
     padding: 3px;
     overflow: hidden;
     background-color: #A30050;
-    /*
     top: 0;
     height: 55px;
     position: fixed;
-    */
 }
 
 /* Style the menu links */
 header div {
-    /*float: right;*/
+    float: right;
 }
 
 header div a {
@@ -34,7 +32,7 @@ header div a {
 }
 
 .content {
-    /*padding-top: 55px;*/
+    padding-top: 55px;
 }
 
 /* Change color on hover */
@@ -45,17 +43,17 @@ header a:hover {
 
 /* Create two unequal columns that floats next to each other */
 .column {
-    /*float: left;
-    padding: 10px;*/
+    float: left;
+    padding: 10px;
 }
 
 /* Left column */
 .column.side {
-    /*width: 20%;*/
+    width: 20%;
 }
 /* Middle column */
 .column.middle {
-   /* width: 80%;*/
+    width: 80%;
 }
 
 
@@ -65,16 +63,16 @@ footer {
     background-color: #ddd;
     padding: 5px;
     margin: 0;
-    /*clear:both;
+    clear:both;
     width: 100%;
-    height: 230px;*/
+    height: 230px;
 }
 
 footer div {
-    /*width: 31%;
-    margin: 10px;*/
+    width: 31%;
+    margin: 10px;
 }
 
 footer div ul {
-    /*list-style-type: none;*/
+    list-style-type: none;
 }
